--- a/ToDoApp/app/src/main/res/values/strings.xml
+++ b/ToDoApp/app/src/main/res/values/strings.xml
@@ -14,4 +14,16 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="title">Title</string>
+    <string name="todo">ToDo</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="add">Add</string>
+    <string name="cancel">cancel</string>
+    <string name="save">Save</string>
+    <string name="item">Item</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="xx_xx_xxxx_xx_xx">XX.XX.XXXX XX:XX</string>
+    <string name="details">details</string>
 </resources>
